fix responsive issue with text on small screen

--- a/src/app/roadmap/roadmap.scss
+++ b/src/app/roadmap/roadmap.scss
@@ -40,4 +40,9 @@
     transition: all .3s ease-out;
   }
 
+  @media screen and (max-width: 480px){
+    .road-text {
+      padding: 5px;
+    }
+  }
 }
